# NoWork

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.VSCodeCounter/2026-06-10_21-11-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: app.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/assets/: greeting.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calendar/: authtest.rs  cal_credentials.rs  mod.rs
src-tauri/src/commands/: chief.rs  database.rs  geolocation.rs  greet.rs  mod.rs  tags.rs  tasks.rs  types.rs
src/lib/: AlertDialog.svelte  Badge.svelte  Button.svelte  Calendar.svelte  CalendarWidget.svelte  Card.svelte  ColorLine.svelte  Countdown.svelte  DatePicker.svelte  Dropdown.svelte  Header.svelte  Logo.svelte  MiniCountdown.svelte  NumberInput.svelte  Sidebar.svelte  SidebarButton.svelte  Skeleton.svelte  Swatch.svelte  TagSelector.svelte  TaskCard.svelte  Textbox.svelte  TimeCard.svelte  TimeWidget.svelte  WindowButtons.svelte  stores.svelte.ts  theme.ts
src/lib/cal/: EventCard.svelte  calendar.ts  calendarCredentialStorage.ts  dateCalculations.ts
src/lib/misc/: CustomScrollbar.svelte  context.ts  datePrints.ts  notifications.ts  portal.ts  position.ts  timeofday.ts  weather.ts
src/lib/shaders/: shader.ts
src/lib/types/: Study.ts  task.ts  taskStore.svelte.ts  timerStore.svelte.ts
src/lib/widgets/: CalendarWidget.svelte  (+4 more)
src/routes/: +layout.svelte  +page.svelte
(+4 files in other folders)
