[package]
name = "nowork"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
futures = "0.3.32"
keyring = "4.0.1"
keyring-core = "1.0.0"
ical = "0.7.*"
icalendar = "0.17.10"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2.5.4"
quick-xml = { version = "0.40.0", features = ["serialize"] }
rand = "0.9"
reqwest = { version = "0.13.3", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2.5.1"
tokio = { version = "1.52.3", features = ["full"] }
roxmltree = "0.21.1"
rrule = "0.14.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

uuid = { version = "1.18.1", features = ["v4"] }
